# UsherBot

./: CMakeLists.txt  README.md  nav_bridge.py  package.xml  publish_test.py  robot_listener.py  runner.py
fri_autonomous_template/follower_robot/include/follower_robot/: FollowerRobotNode.h
fri_autonomous_template/follower_robot/src/: FollowerRobotNode.cpp  MoveToTarget.cpp  follower_robot.cpp
fri_autonomous_template/install/: local_setup.sh  setup.sh
fri_autonomous_template/install/follower_robot/share/follower_robot/: package.bash  package.zsh
fri_autonomous_template/spatial_utils/src/: transform_util.cpp
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: ros.ts
launch/: tb3_burger_simulation.launch.py
src/: nav_forward_demo.cpp
